--- a/mhcd.ipynb
+++ b/mhcd.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "class DiffusionModel(nn.Module):\n",
     "    def __init__(self, state_dim, hidden_dim):\n",
-    "        super(DiffusionModel, self).__init__()\n",
+    "        super().__init__()\n",
     "        self.fc1 = nn.Linear(state_dim + 1, hidden_dim)\n",
     "        self.fc2 = nn.Linear(hidden_dim, hidden_dim)\n",
     "        self.fc3 = nn.Linear(hidden_dim, state_dim)\n",
@@ -58,8 +58,7 @@
     "        x = torch.cat([noisy_state, noise_level], dim=-1)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = F.relu(self.fc2(x))\n",
-    "        denoised = self.fc3(x)\n",
-    "        return denoised.squeeze(0)  # Remove batch dimension\n",
+    "        return self.fc3(x).squeeze(0)\n",
     "\n",
     "class SyntheticTrajectoryDataset(Dataset):\n",
     "    def __init__(self, num_samples, state_dim):\n",
@@ -70,26 +69,22 @@
     "        return self.num_samples\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        # Generate synthetic data with random noise\n",
     "        clean_state = torch.rand(self.state_dim)\n",
     "        noise_level = random.choice([0.5, 1.0])\n",
-    "        noise = torch.randn(self.state_dim) * noise_level\n",
-    "        noisy_state = clean_state + noise\n",
-    "        return noisy_state, torch.tensor(noise_level, dtype=torch.float32), clean_state\n",
+    "        return (clean_state + torch.randn(self.state_dim) * noise_level,\n",
+    "                torch.tensor(noise_level, dtype=torch.float32),\n",
+    "                clean_state)\n",
     "\n",
     "class Node:\n",
     "    def __init__(self, trajectory, noise_level, parent=None, meta_action=0):\n",
-    "        self.trajectory = trajectory  \n",
+    "        self.trajectory = trajectory\n",
     "        self.noise_level = noise_level\n",
     "        self.parent = parent\n",
-    "        self.meta_action = meta_action\n",
     "        self.children = []\n",
     "        self.visit_count = 0\n",
     "        self.value = 0.0\n",
-    "        self.is_terminal = False\n",
-    "\n",
-    "    def add_child(self, child_node):\n",
-    "        self.children.append(child_node)\n",
+    "        self.meta_action_weights = torch.tensor([1.0, 1.0])  # Initial weights for 2 meta-actions\n",
+    "        self.action_history = []\n",
     "\n",
     "class MCTDPlanner:\n",
     "    def __init__(self, diffusion_model, goal, planning_horizon, state_dim, device):\n",
@@ -98,120 +93,111 @@
     "        self.planning_horizon = planning_horizon\n",
     "        self.state_dim = state_dim\n",
     "        self.device = device\n",
-    "        self.root = Node(trajectory=[], noise_level=torch.tensor(1.0, device=device), parent=None)\n",
+    "        self.root = Node([], torch.tensor(1.0, device=device))\n",
     "\n",
     "    def uct_score(self, parent, child, c_param=1.41):\n",
     "        if child.visit_count == 0:\n",
     "            return float('inf')\n",
-    "        exploitation = child.value / child.visit_count\n",
-    "        exploration = c_param * math.sqrt(math.log(parent.visit_count + 1) / child.visit_count)\n",
-    "        return exploitation + exploration\n",
+    "        return (child.value / child.visit_count) + \\\n",
+    "               c_param * math.sqrt(math.log(parent.visit_count + 1) / child.visit_count)\n",
     "\n",
     "    def best_uct_child(self, node):\n",
-    "        scores = [self.uct_score(node, child) for child in node.children]\n",
-    "        return node.children[scores.index(max(scores))]\n",
+    "        return node.children[max(enumerate(\n",
+    "            [self.uct_score(node, child) for child in node.children]),\n",
+    "            key=lambda x: x[1])[0]]\n",
     "\n",
     "    def is_fully_expanded(self, node):\n",
-    "        return len(node.children) == 2\n",
+    "        return len(node.children) >= 2  # Two meta-actions available\n",
     "\n",
     "    def is_leaf(self, node):\n",
-    "        return len(node.children) == 0\n",
-    "\n",
-    "    def is_expandable(self, node):\n",
-    "        return not self.is_fully_expanded(node)\n",
+    "        return len(node.trajectory) >= self.planning_horizon\n",
     "\n",
     "    def select_meta_action(self, node):\n",
-    "        # Smarter meta-action selection\n",
-    "        if node.trajectory:\n",
-    "            last_state = node.trajectory[-1]\n",
-    "            return 0 if last_state.mean() > 0.5 else 1\n",
-    "        return 0\n",
+    "        # Softmax selection based on learned weights\n",
+    "        probs = F.softmax(node.meta_action_weights, dim=0)\n",
+    "        return torch.multinomial(probs, 1).item()\n",
     "\n",
     "    def denoise_subplan(self, node, meta_action):\n",
-    "        return [torch.zeros(self.state_dim, device=self.device)]\n",
+    "        # Generate subplan using meta-action guidance\n",
+    "        with torch.no_grad():\n",
+    "            noise_level = node.noise_level * 0.8  # Noise reduction\n",
+    "            return [self.diffusion_model(\n",
+    "                node.trajectory[-1].to(self.device) if node.trajectory \n",
+    "                else torch.randn(self.state_dim, device=self.device),\n",
+    "                noise_level.to(self.device)\n",
+    "            )]\n",
     "\n",
     "    def create_node(self, subplan):\n",
-    "        return Node(trajectory=subplan, \n",
-    "                   noise_level=subplan[-1].mean(),\n",
-    "                   parent=None)\n",
+    "        return Node(\n",
+    "            trajectory=subplan,\n",
+    "            noise_level=subplan[-1].mean(),\n",
+    "            parent=None\n",
+    "        )\n",
+    "\n",
+    "    def update_meta_schedule(self, node, reward):\n",
+    "        # Update meta-action weights using reward signal\n",
+    "        learning_rate = 0.1\n",
+    "        if node.action_history:\n",
+    "            last_action = node.action_history[-1]\n",
+    "            node.meta_action_weights[last_action] += learning_rate * reward\n",
+    "            node.meta_action_weights = torch.clamp(node.meta_action_weights, 0.1, 10.0)\n",
     "\n",
     "    def fast_denoising(self, partial_trajectory):\n",
-    "        \"\"\"Complete denoising with dimension fixes\"\"\"\n",
-    "        if not partial_trajectory:\n",
+    "        if len(partial_trajectory) >= self.planning_horizon:\n",
     "            return []\n",
-    "        \n",
-    "        num_denoise_steps = 5\n",
-    "        device = self.device\n",
-    "        current_state = partial_trajectory[-1].detach().clone().to(device)\n",
-    "        remaining_steps = self.planning_horizon - len(partial_trajectory)\n",
-    "        \n",
-    "        # Add batch dimension\n",
-    "        current_state = current_state.unsqueeze(0)  # [1, state_dim]\n",
-    "        \n",
-    "        # Noise scheduling (exponential decay)\n",
-    "        initial_noise_level = 0.5\n",
-    "        noise_schedule = torch.exp(\n",
-    "            torch.linspace(\n",
-    "                math.log(initial_noise_level), \n",
-    "                math.log(1e-3), \n",
-    "                num_denoise_steps,\n",
-    "                device=device\n",
-    "            )\n",
-    "        )\n",
-    "        \n",
-    "        denoised_states = []\n",
-    "        for step in range(remaining_steps):\n",
-    "            noisy_state = current_state\n",
-    "            for t in range(num_denoise_steps):\n",
-    "                # Dynamic noise adjustment\n",
-    "                adjusted_noise = noise_schedule[t] * (1 - step/remaining_steps)\n",
-    "                adjusted_noise = adjusted_noise.unsqueeze(0).unsqueeze(1)  # [1,1]\n",
-    "                \n",
-    "                # Denoising step\n",
-    "                with torch.no_grad():\n",
-    "                    denoised = self.diffusion_model(\n",
-    "                        noisy_state, \n",
-    "                        adjusted_noise.to(device)\n",
-    "                    ).unsqueeze(0)  # Maintain batch dimension\n",
-    "                \n",
-    "                # Momentum update\n",
-    "                if t < num_denoise_steps - 1:\n",
-    "                    noisy_state = 0.8 * denoised + 0.2 * noisy_state\n",
-    "                else:\n",
-    "                    current_state = denoised\n",
-    "                    \n",
-    "            # Remove batch dimension and store\n",
-    "            denoised_states.append(current_state.squeeze(0).clone())\n",
     "            \n",
-    "        return denoised_states\n",
+    "        num_steps = self.planning_horizon - len(partial_trajectory)\n",
+    "        current_state = partial_trajectory[-1].clone() if partial_trajectory \\\n",
+    "            else torch.randn(self.state_dim, device=self.device)\n",
+    "            \n",
+    "        noise_schedule = torch.linspace(0.5, 0.01, 5, device=self.device)\n",
+    "        denoised = []\n",
+    "        \n",
+    "        for _ in range(num_steps):\n",
+    "            for t in noise_schedule:\n",
+    "                current_state = self.diffusion_model(\n",
+    "                    current_state.unsqueeze(0),\n",
+    "                    t.unsqueeze(0)\n",
+    "                ).squeeze(0)\n",
+    "            denoised.append(current_state.clone())\n",
+    "            \n",
+    "        return denoised\n",
     "\n",
     "    def evaluate_plan(self, full_plan):\n",
     "        final_state = full_plan[-1].to(self.device)\n",
-    "        return -torch.norm(final_state - self.goal, p=2).item()\n",
+    "        return -torch.norm(final_state - self.goal).item()\n",
     "\n",
     "    def search(self, iterations):\n",
     "        for _ in range(iterations):\n",
     "            node = self.root\n",
+    "            # Selection phase\n",
     "            while self.is_fully_expanded(node) and not self.is_leaf(node):\n",
     "                node = self.best_uct_child(node)\n",
     "\n",
-    "            if self.is_expandable(node):\n",
-    "                gs = self.select_meta_action(node)\n",
-    "                child = self.create_node(self.denoise_subplan(node, gs))\n",
-    "                node.add_child(child)\n",
+    "            # Expansion phase\n",
+    "            if not self.is_leaf(node):\n",
+    "                meta_action = self.select_meta_action(node)\n",
+    "                node.action_history.append(meta_action)\n",
+    "                subplan = self.denoise_subplan(node, meta_action)\n",
+    "                child = self.create_node(subplan)\n",
+    "                node.children.append(child)\n",
     "                node = child\n",
     "\n",
+    "            # Simulation phase\n",
     "            full_plan = node.trajectory + self.fast_denoising(node.trajectory)\n",
     "            reward = self.evaluate_plan(full_plan)\n",
-    "            \n",
-    "            # Backpropagation\n",
-    "            current_node = node\n",
-    "            while current_node is not None:\n",
-    "                current_node.visit_count += 1\n",
-    "                current_node.value += reward\n",
-    "                current_node = current_node.parent\n",
     "\n",
-    "        return self.best_uct_child(self.root).trajectory\n",
+    "            # Backpropagation\n",
+    "            current = node\n",
+    "            while current is not None:\n",
+    "                current.visit_count += 1\n",
+    "                current.value += reward\n",
+    "                self.update_meta_schedule(current, reward)\n",
+    "                current = current.parent\n",
+    "\n",
+    "        # Return best trajectory\n",
+    "        best_child = max(self.root.children, key=lambda x: x.value/x.visit_count)\n",
+    "        return best_child.trajectory\n",
     "\n",
     "def train_diffusion_model(model, device, dataloader, epochs=5, lr=1e-3):\n",
     "    model.train()\n",
