--- a/mhcd.ipynb
+++ b/mhcd.ipynb
@@ -10,23 +10,23 @@
      "output_type": "stream",
      "text": [
       "Training diffusion model...\n",
-      "Epoch 1/10 - Loss: 0.1047\n",
-      "Epoch 2/10 - Loss: 0.0763\n",
-      "Epoch 3/10 - Loss: 0.0743\n",
-      "Epoch 4/10 - Loss: 0.0735\n",
-      "Epoch 5/10 - Loss: 0.0718\n",
-      "Epoch 6/10 - Loss: 0.0729\n",
-      "Epoch 7/10 - Loss: 0.0722\n",
-      "Epoch 8/10 - Loss: 0.0722\n",
-      "Epoch 9/10 - Loss: 0.0718\n",
-      "Epoch 10/10 - Loss: 0.0706\n",
+      "Epoch 1/10 - Loss: 0.1708\n",
+      "Epoch 2/10 - Loss: 0.0800\n",
+      "Epoch 3/10 - Loss: 0.0752\n",
+      "Epoch 4/10 - Loss: 0.0740\n",
+      "Epoch 5/10 - Loss: 0.0727\n",
+      "Epoch 6/10 - Loss: 0.0724\n",
+      "Epoch 7/10 - Loss: 0.0724\n",
+      "Epoch 8/10 - Loss: 0.0720\n",
+      "Epoch 9/10 - Loss: 0.0720\n",
+      "Epoch 10/10 - Loss: 0.0718\n",
       "Diffusion model training completed.\n",
       "\n",
       "Running planning search...\n",
       "\n",
       "Planned trajectory length: 1\n",
-      "Step 0: [0. 0. 0. 0.]\n",
-      "Final reward (negative distance): -2.000\n"
+      "Step 0: [0.467 0.433 0.26  0.458]\n",
+      "Final reward (negative distance): -1.203\n"
      ]
     }
    ],
