--- a/mhcd.ipynb
+++ b/mhcd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -10,23 +10,24 @@
      "output_type": "stream",
      "text": [
       "Training diffusion model...\n",
-      "Epoch 1/10 - Loss: 0.1708\n",
-      "Epoch 2/10 - Loss: 0.0800\n",
-      "Epoch 3/10 - Loss: 0.0752\n",
-      "Epoch 4/10 - Loss: 0.0740\n",
-      "Epoch 5/10 - Loss: 0.0727\n",
-      "Epoch 6/10 - Loss: 0.0724\n",
-      "Epoch 7/10 - Loss: 0.0724\n",
+      "Epoch 1/10 - Loss: 0.1294\n",
+      "Epoch 2/10 - Loss: 0.0765\n",
+      "Epoch 3/10 - Loss: 0.0743\n",
+      "Epoch 4/10 - Loss: 0.0731\n",
+      "Epoch 5/10 - Loss: 0.0737\n",
+      "Epoch 6/10 - Loss: 0.0728\n",
+      "Epoch 7/10 - Loss: 0.0728\n",
       "Epoch 8/10 - Loss: 0.0720\n",
-      "Epoch 9/10 - Loss: 0.0720\n",
-      "Epoch 10/10 - Loss: 0.0718\n",
+      "Epoch 9/10 - Loss: 0.0728\n",
+      "Epoch 10/10 - Loss: 0.0719\n",
       "Diffusion model training completed.\n",
       "\n",
       "Running planning search...\n",
       "\n",
-      "Planned trajectory length: 1\n",
-      "Step 0: [0.467 0.433 0.26  0.458]\n",
-      "Final reward (negative distance): -1.203\n"
+      "Planned trajectory length: 2\n",
+      "Step 0: [0.694 0.395 0.523 0.421]\n",
+      "Step 1: [0.543 0.476 0.511 0.487]\n",
+      "Final reward (negative distance): -0.993\n"
      ]
     }
    ],
@@ -76,14 +77,15 @@
     "                clean_state)\n",
     "\n",
     "class Node:\n",
-    "    def __init__(self, trajectory, noise_level, parent=None, meta_action=0):\n",
-    "        self.trajectory = trajectory\n",
-    "        self.noise_level = noise_level\n",
+    "    def __init__(self, trajectory, noise_level, parent=None, meta_action=0, device='cuda'):\n",
+    "        self.device = device\n",
+    "        self.trajectory = [t.to(self.device) for t in trajectory] if parent else trajectory\n",
+    "        self.noise_level = noise_level.to(self.device)\n",
     "        self.parent = parent\n",
     "        self.children = []\n",
     "        self.visit_count = 0\n",
     "        self.value = 0.0\n",
-    "        self.meta_action_weights = torch.tensor([1.0, 1.0])  # Initial weights for 2 meta-actions\n",
+    "        self.meta_action_weights = torch.tensor([1.0, 1.0])\n",
     "        self.action_history = []\n",
     "\n",
     "class MCTDPlanner:\n",
@@ -96,10 +98,9 @@
     "        self.root = Node([], torch.tensor(1.0, device=device))\n",
     "\n",
     "    def uct_score(self, parent, child, c_param=1.41):\n",
-    "        if child.visit_count == 0:\n",
-    "            return float('inf')\n",
-    "        return (child.value / child.visit_count) + \\\n",
-    "               c_param * math.sqrt(math.log(parent.visit_count + 1) / child.visit_count)\n",
+    "        exploration = c_param * math.sqrt(math.log(parent.visit_count + 1) / child.visit_count)\n",
+    "        noise_penalty = child.noise_level.item() * 0.5\n",
+    "        return (child.value / child.visit_count) + exploration - noise_penalty\n",
     "\n",
     "    def best_uct_child(self, node):\n",
     "        return node.children[max(enumerate(\n",
@@ -118,29 +119,54 @@
     "        return torch.multinomial(probs, 1).item()\n",
     "\n",
     "    def denoise_subplan(self, node, meta_action):\n",
-    "        # Generate subplan using meta-action guidance\n",
-    "        with torch.no_grad():\n",
-    "            noise_level = node.noise_level * 0.8  # Noise reduction\n",
-    "            return [self.diffusion_model(\n",
-    "                node.trajectory[-1].to(self.device) if node.trajectory \n",
-    "                else torch.randn(self.state_dim, device=self.device),\n",
-    "                noise_level.to(self.device)\n",
-    "            )]\n",
+    "        device = node.device  # 使用节点设备属性\n",
+    "        subplan = []\n",
+    "        \n",
+    "        # 根据meta_action选择策略参数\n",
+    "        if meta_action == 0:\n",
+    "            num_steps = 1\n",
+    "            noise_decay = 0.5  # 保守策略：小步长，快速降噪\n",
+    "        elif meta_action == 1:\n",
+    "            num_steps = 2\n",
+    "            noise_decay = 0.8  # 激进策略：大步长，缓慢降噪\n",
+    "        else:\n",
+    "            raise ValueError(f\"Unknown meta_action: {meta_action}\")\n",
+    "        \n",
+    "        # 获取初始状态和噪声水平\n",
+    "        if node.trajectory:\n",
+    "            current_state = node.trajectory[-1].to(device)\n",
+    "            current_noise = node.noise_level.to(device) * noise_decay\n",
+    "        else:\n",
+    "            current_state = torch.randn(self.state_dim, device=device)\n",
+    "            current_noise = torch.tensor(1.0, device=device) * noise_decay\n",
+    "        \n",
+    "        # 生成子计划\n",
+    "        for step in range(num_steps):\n",
+    "            # 动态调整噪声水平\n",
+    "            current_noise = current_noise * (0.9 ** step)  # 逐步衰减\n",
+    "            current_state = self.diffusion_model(\n",
+    "                current_state.unsqueeze(0),\n",
+    "                current_noise.unsqueeze(0)\n",
+    "            ).squeeze(0)\n",
+    "            subplan.append(current_state)\n",
+    "        \n",
+    "        return subplan\n",
     "\n",
-    "    def create_node(self, subplan):\n",
+    "    def create_node(self, subplan, parent):\n",
+    "        # 优先从父节点获取设备，否则使用规划器设备\n",
+    "        device = parent.device if parent else self.device\n",
+    "        subplan = [s.to(device) for s in subplan]\n",
     "        return Node(\n",
     "            trajectory=subplan,\n",
-    "            noise_level=subplan[-1].mean(),\n",
-    "            parent=None\n",
+    "            noise_level=subplan[-1].mean().to(device),\n",
+    "            parent=parent,\n",
+    "            device=device\n",
     "        )\n",
     "\n",
     "    def update_meta_schedule(self, node, reward):\n",
-    "        # Update meta-action weights using reward signal\n",
-    "        learning_rate = 0.1\n",
-    "        if node.action_history:\n",
-    "            last_action = node.action_history[-1]\n",
-    "            node.meta_action_weights[last_action] += learning_rate * reward\n",
-    "            node.meta_action_weights = torch.clamp(node.meta_action_weights, 0.1, 10.0)\n",
+    "        for action in node.action_history:\n",
+    "            node.meta_action_weights[action] += reward * 0.1\n",
+    "        node.meta_action_weights.clamp_(0.1, 10.0)\n",
     "\n",
     "    def fast_denoising(self, partial_trajectory):\n",
     "        if len(partial_trajectory) >= self.planning_horizon:\n",
@@ -179,7 +205,7 @@
     "                meta_action = self.select_meta_action(node)\n",
     "                node.action_history.append(meta_action)\n",
     "                subplan = self.denoise_subplan(node, meta_action)\n",
-    "                child = self.create_node(subplan)\n",
+    "                child = self.create_node(subplan, parent=node)\n",
     "                node.children.append(child)\n",
     "                node = child\n",
     "\n",
