--- a/mhcd.ipynb
+++ b/mhcd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,24 +10,24 @@
      "output_type": "stream",
      "text": [
       "Training diffusion model...\n",
-      "Epoch 1/10 - Loss: 0.1294\n",
-      "Epoch 2/10 - Loss: 0.0765\n",
+      "Epoch 1/10 - Loss: 0.1877\n",
+      "Epoch 2/10 - Loss: 0.0796\n",
       "Epoch 3/10 - Loss: 0.0743\n",
-      "Epoch 4/10 - Loss: 0.0731\n",
-      "Epoch 5/10 - Loss: 0.0737\n",
+      "Epoch 4/10 - Loss: 0.0747\n",
+      "Epoch 5/10 - Loss: 0.0736\n",
       "Epoch 6/10 - Loss: 0.0728\n",
-      "Epoch 7/10 - Loss: 0.0728\n",
-      "Epoch 8/10 - Loss: 0.0720\n",
-      "Epoch 9/10 - Loss: 0.0728\n",
+      "Epoch 7/10 - Loss: 0.0737\n",
+      "Epoch 8/10 - Loss: 0.0718\n",
+      "Epoch 9/10 - Loss: 0.0723\n",
       "Epoch 10/10 - Loss: 0.0719\n",
       "Diffusion model training completed.\n",
       "\n",
       "Running planning search...\n",
       "\n",
       "Planned trajectory length: 2\n",
-      "Step 0: [0.694 0.395 0.523 0.421]\n",
-      "Step 1: [0.543 0.476 0.511 0.487]\n",
-      "Final reward (negative distance): -0.993\n"
+      "Step 0: [0.473 0.5   0.314 0.413]\n",
+      "Step 1: [0.516 0.51  0.46  0.478]\n",
+      "Final reward (negative distance): -1.019\n"
      ]
     }
    ],
@@ -119,20 +119,20 @@
     "        return torch.multinomial(probs, 1).item()\n",
     "\n",
     "    def denoise_subplan(self, node, meta_action):\n",
-    "        device = node.device  # 使用节点设备属性\n",
+    "        device = node.device  # Use node's device attribute\n",
     "        subplan = []\n",
     "        \n",
-    "        # 根据meta_action选择策略参数\n",
+    "        # Select strategy parameters based on meta_action\n",
     "        if meta_action == 0:\n",
     "            num_steps = 1\n",
-    "            noise_decay = 0.5  # 保守策略：小步长，快速降噪\n",
+    "            noise_decay = 0.5  # Conservative strategy: small step, fast denoising\n",
     "        elif meta_action == 1:\n",
     "            num_steps = 2\n",
-    "            noise_decay = 0.8  # 激进策略：大步长，缓慢降噪\n",
+    "            noise_decay = 0.8  # Aggressive strategy: large step, slow denoising\n",
     "        else:\n",
     "            raise ValueError(f\"Unknown meta_action: {meta_action}\")\n",
     "        \n",
-    "        # 获取初始状态和噪声水平\n",
+    "        # Get initial state and noise level\n",
     "        if node.trajectory:\n",
     "            current_state = node.trajectory[-1].to(device)\n",
     "            current_noise = node.noise_level.to(device) * noise_decay\n",
@@ -140,10 +140,10 @@
     "            current_state = torch.randn(self.state_dim, device=device)\n",
     "            current_noise = torch.tensor(1.0, device=device) * noise_decay\n",
     "        \n",
-    "        # 生成子计划\n",
+    "        # Generate subplan\n",
     "        for step in range(num_steps):\n",
-    "            # 动态调整噪声水平\n",
-    "            current_noise = current_noise * (0.9 ** step)  # 逐步衰减\n",
+    "            # Dynamic noise adjustment\n",
+    "            current_noise = current_noise * (0.9 ** step)  # Gradual decay\n",
     "            current_state = self.diffusion_model(\n",
     "                current_state.unsqueeze(0),\n",
     "                current_noise.unsqueeze(0)\n",
@@ -153,7 +153,7 @@
     "        return subplan\n",
     "\n",
     "    def create_node(self, subplan, parent):\n",
-    "        # 优先从父节点获取设备，否则使用规划器设备\n",
+    "        # Prioritize parent's device, fallback to planner's device\n",
     "        device = parent.device if parent else self.device\n",
     "        subplan = [s.to(device) for s in subplan]\n",
     "        return Node(\n",
@@ -199,7 +199,6 @@
     "            # Selection phase\n",
     "            while self.is_fully_expanded(node) and not self.is_leaf(node):\n",
     "                node = self.best_uct_child(node)\n",
-    "\n",
     "            # Expansion phase\n",
     "            if not self.is_leaf(node):\n",
     "                meta_action = self.select_meta_action(node)\n",
@@ -208,11 +207,9 @@
     "                child = self.create_node(subplan, parent=node)\n",
     "                node.children.append(child)\n",
     "                node = child\n",
-    "\n",
     "            # Simulation phase\n",
     "            full_plan = node.trajectory + self.fast_denoising(node.trajectory)\n",
     "            reward = self.evaluate_plan(full_plan)\n",
-    "\n",
     "            # Backpropagation\n",
     "            current = node\n",
     "            while current is not None:\n",
@@ -220,7 +217,6 @@
     "                current.value += reward\n",
     "                self.update_meta_schedule(current, reward)\n",
     "                current = current.parent\n",
-    "\n",
     "        # Return best trajectory\n",
     "        best_child = max(self.root.children, key=lambda x: x.value/x.visit_count)\n",
     "        return best_child.trajectory\n",
@@ -262,7 +258,7 @@
     "    print(\"Training diffusion model...\")\n",
     "    train_diffusion_model(diffusion_model, device, dataloader, train_epochs)\n",
     "    print(\"Diffusion model training completed.\\n\")\n",
-    "\n",
+    "    \n",
     "    # Planning setup\n",
     "    goal = torch.ones(state_dim, device=device)\n",
     "    planner = MCTDPlanner(diffusion_model, goal, planning_horizon, state_dim, device)\n",
