Use cosine distance to cut off the parent node gradient.

--- a/mhcd.ipynb
+++ b/mhcd.ipynb
@@ -2,32 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training diffusion model...\n",
-      "Epoch 1/10 - Loss: 0.1877\n",
-      "Epoch 2/10 - Loss: 0.0796\n",
-      "Epoch 3/10 - Loss: 0.0743\n",
-      "Epoch 4/10 - Loss: 0.0747\n",
-      "Epoch 5/10 - Loss: 0.0736\n",
-      "Epoch 6/10 - Loss: 0.0728\n",
-      "Epoch 7/10 - Loss: 0.0737\n",
-      "Epoch 8/10 - Loss: 0.0718\n",
-      "Epoch 9/10 - Loss: 0.0723\n",
-      "Epoch 10/10 - Loss: 0.0719\n",
-      "Diffusion model training completed.\n",
-      "\n",
-      "Running planning search...\n",
-      "\n",
-      "Planned trajectory length: 2\n",
-      "Step 0: [0.473 0.5   0.314 0.413]\n",
-      "Step 1: [0.516 0.51  0.46  0.478]\n",
-      "Final reward (negative distance): -1.019\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -40,6 +26,19 @@
     "import math\n",
     "import random\n",
     "\n",
+    "class MetaPolicy(nn.Module):\n",
+    "    def __init__(self, state_dim):\n",
+    "        super().__init__()\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(state_dim + 1, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 2)\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, state, noise_level):\n",
+    "        x = torch.cat([state, noise_level.unsqueeze(-1)], dim=-1)\n",
+    "        return self.fc(x)\n",
+    "\n",
     "class DiffusionModel(nn.Module):\n",
     "    def __init__(self, state_dim, hidden_dim):\n",
     "        super().__init__()\n",
@@ -48,13 +47,9 @@
     "        self.fc3 = nn.Linear(hidden_dim, state_dim)\n",
     "    \n",
     "    def forward(self, noisy_state, noise_level):\n",
-    "        # Dimension unification handling\n",
     "        if noisy_state.dim() == 1:\n",
     "            noisy_state = noisy_state.unsqueeze(0)\n",
-    "        if noise_level.dim() == 0:\n",
-    "            noise_level = noise_level.unsqueeze(0).unsqueeze(1)\n",
-    "        elif noise_level.dim() == 1:\n",
-    "            noise_level = noise_level.unsqueeze(1)\n",
+    "        noise_level = noise_level.view(-1, 1)\n",
     "            \n",
     "        x = torch.cat([noisy_state, noise_level], dim=-1)\n",
     "        x = F.relu(self.fc1(x))\n",
@@ -77,16 +72,26 @@
     "                clean_state)\n",
     "\n",
     "class Node:\n",
-    "    def __init__(self, trajectory, noise_level, parent=None, meta_action=0, device='cuda'):\n",
+    "    def __init__(self, trajectory, noise_level, parent=None, device='cuda'):\n",
     "        self.device = device\n",
-    "        self.trajectory = [t.to(self.device) for t in trajectory] if parent else trajectory\n",
-    "        self.noise_level = noise_level.to(self.device)\n",
+    "        self.trajectory = [t.detach().requires_grad_(False) for t in trajectory] if parent else trajectory\n",
+    "        self.noise_level = noise_level.detach().to(self.device)\n",
     "        self.parent = parent\n",
     "        self.children = []\n",
     "        self.visit_count = 0\n",
     "        self.value = 0.0\n",
-    "        self.meta_action_weights = torch.tensor([1.0, 1.0])\n",
-    "        self.action_history = []\n",
+    "        self.meta_policy = MetaPolicy(len(self.trajectory[-1])).to(device)\n",
+    "        self.optimizer = optim.Adam(self.meta_policy.parameters(), lr=0.001)\n",
+    "\n",
+    "    def update_policy(self, reward):\n",
+    "        if not self.trajectory:\n",
+    "            return\n",
+    "            \n",
+    "        self.optimizer.zero_grad()\n",
+    "        policy_logits = self.meta_policy(self.trajectory[-1], self.noise_level)\n",
+    "        loss = -reward * F.log_softmax(policy_logits, dim=-1)[0]\n",
+    "        loss.backward(retain_graph=False)\n",
+    "        self.optimizer.step()\n",
     "\n",
     "class MCTDPlanner:\n",
     "    def __init__(self, diffusion_model, goal, planning_horizon, state_dim, device):\n",
@@ -95,97 +100,80 @@
     "        self.planning_horizon = planning_horizon\n",
     "        self.state_dim = state_dim\n",
     "        self.device = device\n",
-    "        self.root = Node([], torch.tensor(1.0, device=device))\n",
+    "        self.root = Node([torch.randn(state_dim, device=device)], \n",
+    "                        torch.tensor(1.0, device=device),\n",
+    "                        device=device)\n",
+    "\n",
+    "    def cosine_schedule(self, t, T, s=0.008):\n",
+    "        return torch.cos((t / T + s) / (1 + s) * math.pi / 2) ** 2\n",
     "\n",
     "    def uct_score(self, parent, child, c_param=1.41):\n",
-    "        exploration = c_param * math.sqrt(math.log(parent.visit_count + 1) / child.visit_count)\n",
-    "        noise_penalty = child.noise_level.item() * 0.5\n",
-    "        return (child.value / child.visit_count) + exploration - noise_penalty\n",
+    "        exploration = c_param * math.sqrt(math.log(parent.visit_count + 1) / (child.visit_count + 1e-8))\n",
+    "        noise_penalty = child.noise_level * math.log(self.planning_horizon + 1)\n",
+    "        return (child.value / (child.visit_count + 1e-8)) + exploration - noise_penalty\n",
     "\n",
     "    def best_uct_child(self, node):\n",
-    "        return node.children[max(enumerate(\n",
-    "            [self.uct_score(node, child) for child in node.children]),\n",
-    "            key=lambda x: x[1])[0]]\n",
+    "        scores = [self.uct_score(node, child) for child in node.children]\n",
+    "        return node.children[torch.argmax(torch.tensor(scores)).item()]\n",
     "\n",
     "    def is_fully_expanded(self, node):\n",
-    "        return len(node.children) >= 2  # Two meta-actions available\n",
+    "        return len(node.children) >= 2\n",
     "\n",
     "    def is_leaf(self, node):\n",
     "        return len(node.trajectory) >= self.planning_horizon\n",
     "\n",
     "    def select_meta_action(self, node):\n",
-    "        # Softmax selection based on learned weights\n",
-    "        probs = F.softmax(node.meta_action_weights, dim=0)\n",
-    "        return torch.multinomial(probs, 1).item()\n",
+    "        with torch.no_grad():\n",
+    "            logits = node.meta_policy(node.trajectory[-1], node.noise_level)\n",
+    "            return torch.distributions.Categorical(logits=logits).sample().item()\n",
     "\n",
     "    def denoise_subplan(self, node, meta_action):\n",
-    "        device = node.device  # Use node's device attribute\n",
+    "        device = node.device\n",
     "        subplan = []\n",
+    "        num_steps = meta_action + 1\n",
+    "        noise_decay = 0.5 + 0.3 * meta_action\n",
     "        \n",
-    "        # Select strategy parameters based on meta_action\n",
-    "        if meta_action == 0:\n",
-    "            num_steps = 1\n",
-    "            noise_decay = 0.5  # Conservative strategy: small step, fast denoising\n",
-    "        elif meta_action == 1:\n",
-    "            num_steps = 2\n",
-    "            noise_decay = 0.8  # Aggressive strategy: large step, slow denoising\n",
-    "        else:\n",
-    "            raise ValueError(f\"Unknown meta_action: {meta_action}\")\n",
+    "        current_state = node.trajectory[-1].clone()\n",
+    "        current_noise = node.noise_level * noise_decay\n",
     "        \n",
-    "        # Get initial state and noise level\n",
-    "        if node.trajectory:\n",
-    "            current_state = node.trajectory[-1].to(device)\n",
-    "            current_noise = node.noise_level.to(device) * noise_decay\n",
-    "        else:\n",
-    "            current_state = torch.randn(self.state_dim, device=device)\n",
-    "            current_noise = torch.tensor(1.0, device=device) * noise_decay\n",
-    "        \n",
-    "        # Generate subplan\n",
     "        for step in range(num_steps):\n",
-    "            # Dynamic noise adjustment\n",
-    "            current_noise = current_noise * (0.9 ** step)  # Gradual decay\n",
+    "            t = torch.tensor(step / num_steps, device=device)\n",
+    "            noise_level = self.cosine_schedule(t, num_steps)\n",
     "            current_state = self.diffusion_model(\n",
     "                current_state.unsqueeze(0),\n",
-    "                current_noise.unsqueeze(0)\n",
+    "                noise_level.unsqueeze(0)\n",
     "            ).squeeze(0)\n",
-    "            subplan.append(current_state)\n",
+    "            subplan.append(current_state.detach())\n",
     "        \n",
     "        return subplan\n",
     "\n",
     "    def create_node(self, subplan, parent):\n",
-    "        # Prioritize parent's device, fallback to planner's device\n",
     "        device = parent.device if parent else self.device\n",
     "        subplan = [s.to(device) for s in subplan]\n",
     "        return Node(\n",
     "            trajectory=subplan,\n",
-    "            noise_level=subplan[-1].mean().to(device),\n",
+    "            noise_level=subplan[-1].mean().detach(),\n",
     "            parent=parent,\n",
     "            device=device\n",
     "        )\n",
-    "\n",
-    "    def update_meta_schedule(self, node, reward):\n",
-    "        for action in node.action_history:\n",
-    "            node.meta_action_weights[action] += reward * 0.1\n",
-    "        node.meta_action_weights.clamp_(0.1, 10.0)\n",
     "\n",
     "    def fast_denoising(self, partial_trajectory):\n",
     "        if len(partial_trajectory) >= self.planning_horizon:\n",
     "            return []\n",
     "            \n",
-    "        num_steps = self.planning_horizon - len(partial_trajectory)\n",
-    "        current_state = partial_trajectory[-1].clone() if partial_trajectory \\\n",
-    "            else torch.randn(self.state_dim, device=self.device)\n",
-    "            \n",
-    "        noise_schedule = torch.linspace(0.5, 0.01, 5, device=self.device)\n",
+    "        remaining_steps = self.planning_horizon - len(partial_trajectory)\n",
+    "        current_state = partial_trajectory[-1].clone() if partial_trajectory else torch.randn(self.state_dim, device=self.device)\n",
     "        denoised = []\n",
     "        \n",
-    "        for _ in range(num_steps):\n",
-    "            for t in noise_schedule:\n",
-    "                current_state = self.diffusion_model(\n",
-    "                    current_state.unsqueeze(0),\n",
-    "                    t.unsqueeze(0)\n",
-    "                ).squeeze(0)\n",
-    "            denoised.append(current_state.clone())\n",
+    "        T = 5 * remaining_steps\n",
+    "        for step in range(remaining_steps):\n",
+    "            t = torch.tensor(step / remaining_steps, device=self.device)\n",
+    "            noise_level = self.cosine_schedule(t, T)\n",
+    "            current_state = self.diffusion_model(\n",
+    "                current_state.unsqueeze(0),\n",
+    "                noise_level.unsqueeze(0)\n",
+    "            ).squeeze(0)\n",
+    "            denoised.append(current_state.detach())\n",
     "            \n",
     "        return denoised\n",
     "\n",
@@ -196,29 +184,32 @@
     "    def search(self, iterations):\n",
     "        for _ in range(iterations):\n",
     "            node = self.root\n",
+    "            \n",
     "            # Selection phase\n",
     "            while self.is_fully_expanded(node) and not self.is_leaf(node):\n",
     "                node = self.best_uct_child(node)\n",
+    "            \n",
     "            # Expansion phase\n",
     "            if not self.is_leaf(node):\n",
     "                meta_action = self.select_meta_action(node)\n",
-    "                node.action_history.append(meta_action)\n",
     "                subplan = self.denoise_subplan(node, meta_action)\n",
     "                child = self.create_node(subplan, parent=node)\n",
     "                node.children.append(child)\n",
     "                node = child\n",
+    "            \n",
     "            # Simulation phase\n",
     "            full_plan = node.trajectory + self.fast_denoising(node.trajectory)\n",
     "            reward = self.evaluate_plan(full_plan)\n",
+    "            \n",
     "            # Backpropagation\n",
-    "            current = node\n",
-    "            while current is not None:\n",
-    "                current.visit_count += 1\n",
-    "                current.value += reward\n",
-    "                self.update_meta_schedule(current, reward)\n",
-    "                current = current.parent\n",
-    "        # Return best trajectory\n",
-    "        best_child = max(self.root.children, key=lambda x: x.value/x.visit_count)\n",
+    "            current_node = node\n",
+    "            while current_node is not None:\n",
+    "                current_node.visit_count += 1\n",
+    "                current_node.value += reward\n",
+    "                current_node.update_policy(reward)\n",
+    "                current_node = current_node.parent\n",
+    "        \n",
+    "        best_child = max(self.root.children, key=lambda x: x.value/(x.visit_count + 1e-8))\n",
     "        return best_child.trajectory\n",
     "\n",
     "def train_diffusion_model(model, device, dataloader, epochs=5, lr=1e-3):\n",
@@ -233,7 +224,7 @@
     "            clean_state = clean_state.to(device)\n",
     "            \n",
     "            optimizer.zero_grad()\n",
-    "            output = model(noisy_state, noise_level)\n",
+    "            output = model(noisy_state, noise_level) \n",
     "            loss = loss_fn(output, clean_state)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
@@ -250,7 +241,6 @@
     "    train_epochs = 10\n",
     "    planning_horizon = 10\n",
     "    \n",
-    "    # Dataset and model setup\n",
     "    dataset = SyntheticTrajectoryDataset(num_train_samples, state_dim)\n",
     "    dataloader = DataLoader(dataset, batch_size, shuffle=True)\n",
     "    \n",
@@ -259,14 +249,12 @@
     "    train_diffusion_model(diffusion_model, device, dataloader, train_epochs)\n",
     "    print(\"Diffusion model training completed.\\n\")\n",
     "    \n",
-    "    # Planning setup\n",
     "    goal = torch.ones(state_dim, device=device)\n",
     "    planner = MCTDPlanner(diffusion_model, goal, planning_horizon, state_dim, device)\n",
     "    \n",
     "    print(\"Running planning search...\")\n",
     "    best_traj = planner.search(100)\n",
     "    \n",
-    "    # Results display\n",
     "    if not best_traj:\n",
     "        print(\"No valid trajectory found\")\n",
     "    else:\n",
