--- a/mhcd.ipynb
+++ b/mhcd.ipynb
@@ -6,14 +6,27 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training diffusion model...\n",
+      "Epoch 1/10 - Loss: 0.1733\n",
+      "Epoch 2/10 - Loss: 0.0790\n",
+      "Epoch 3/10 - Loss: 0.0751\n",
+      "Epoch 4/10 - Loss: 0.0734\n",
+      "Epoch 5/10 - Loss: 0.0732\n",
+      "Epoch 6/10 - Loss: 0.0723\n",
+      "Epoch 7/10 - Loss: 0.0721\n",
+      "Epoch 8/10 - Loss: 0.0716\n",
+      "Epoch 9/10 - Loss: 0.0717\n",
+      "Epoch 10/10 - Loss: 0.0711\n",
+      "Diffusion model training completed.\n",
+      "\n",
+      "Running planning search...\n",
+      "\n",
+      "Planned trajectory length: 1\n",
+      "Step 0: [0.373 0.326 0.422 0.393]\n",
+      "Final reward (negative distance): -1.245\n"
      ]
     }
    ],
